--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.17.30",
     "@types/plotly.js": "^2.29.1",
     "@types/react": "^18.3.3",
@@ -52,6 +53,5 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
-    "vite": "^5.3.5"
-  }
+    "vite": "^5.3.5"  }
 }
