--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.17",
-    "katex": "^0.16.10", // Ensure katex is a dependency
+    "katex": "^0.16.10", 
     "lucide-react": "^0.417.0",
     "plotly.js": "^2.34.0",
     "react": "^18.3.1",
@@ -31,19 +31,19 @@
     "remark-math": "^6.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0" // Added uuid
+    "uuid": "^10.0.0" 
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/katex": "^0.16.7", // Added katex types
+    "@types/katex": "^0.16.7", 
     "@types/node": "^20.17.30",
     "@types/plotly.js": "^2.29.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-plotly.js": "^2.6.3",
-    "@types/uuid": "^10.0.0", // Added uuid types
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -56,5 +56,6 @@
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
     "vite": "^5.3.5"
-  }
+ 
+ }
 }
