--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,76 +1,65 @@
-# docker-compose.yml
 version: '3.8' # Specifies the Docker Compose file format version
 
 services:
   # Qdrant Vector Database Service
   qdrant:
-    image: qdrant/qdrant:latest # Use the official Qdrant image
+    image: qdrant/qdrant:latest
     container_name: grok_stem_qdrant
     ports:
-      - "6333:6333" # gRPC port
-      - "6334:6334" # HTTP/REST port
+      - "6333:6333"
+      - "6334:6334"
     volumes:
-      - qdrant_storage:/qdrant/storage # Persist Qdrant data using a named volume
+      - qdrant_storage:/qdrant/storage
     networks:
-      - grok_stem_network # Connect to the custom network
-    restart: unless-stopped # Restart policy
-    # Optional: Add healthcheck for Qdrant if needed
-    # healthcheck:
-    #   test: ["CMD", "curl", "-f", "http://localhost:6333/healthz"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
+      - grok_stem_network
+    restart: unless-stopped
 
   # Backend Service (FastAPI)
   backend:
     container_name: grok_stem_backend
     build:
-      context: ./backend # Directory containing the backend Dockerfile and code
+      context: ./backend         # build from your backend folder
       dockerfile: Dockerfile
     ports:
-      - "8000:8000" # Map host port 8000 to container port 8000 (FastAPI default)
+      - "8000:8000"
     volumes:
-      - ./backend:/app # Mount backend code into the container for development (hot-reloading)
+      - ./backend:/app/backend   # <-- mount into /app/backend, not /app
     env_file:
-      - ./backend/.env # Load environment variables from .env file in backend directory
+      - ./backend/.env
     environment:
-      - PYTHONPATH=/app  # Set the app directory as the root for Python imports
+      - PYTHONPATH=/app          # <-- so 'import backend' finds /app/backend
     networks:
       - grok_stem_network
-    depends_on: # Ensure Qdrant starts before the backend
-       qdrant:
-         condition: service_started # Or service_healthy if healthcheck is added
+    depends_on:
+      qdrant:
+        condition: service_started
     restart: unless-stopped
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload # Command to run FastAPI with hot-reloading
+    command: uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload
 
   # Frontend Service (React/Vite)
   frontend:
     container_name: grok_stem_frontend
     build:
-      context: ./frontend # Directory containing the frontend Dockerfile and code
+      context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "5173:5173" # Map host port 5173 to container port 5173 (Vite default)
+      - "5173:5173"
     volumes:
-      - ./frontend:/app # Mount frontend code
-      - /app/node_modules # Use node_modules from within the container image, not the host
+      - ./frontend:/app
+      - /app/node_modules
     networks:
       - grok_stem_network
-    depends_on: # Ensure backend is ready (or at least started) before frontend tries connecting
+    depends_on:
       - backend
     restart: unless-stopped
     environment:
-      # Helps with detecting file changes within Docker volumes on some systems
-      # VITE_HMR uses WebSocket, WATCHPACK is for polling fallback
-      - CHOKIDAR_USEPOLLING=true # Alternative polling method if watchpack fails
+      - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
-      - VITE_WEBSOCKET_URL=ws://localhost:8000/ws # Example, but proxy is usually preferred for dev
+      - VITE_WEBSOCKET_URL=ws://localhost:8000/ws
 
-# Named volume for Qdrant data persistence
 volumes:
   qdrant_storage:
 
-# Custom network for inter-service communication
 networks:
   grok_stem_network:
     driver: bridge
