--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3.8' # Specifies the Docker Compose file format version
+
+version: '3.8'
 
 services:
   # Qdrant Vector Database Service
@@ -6,37 +7,45 @@ services:
     image: qdrant/qdrant:latest
     container_name: grok_stem_qdrant
     ports:
-      - "6333:6333"
-      - "6334:6334"
+      - "6333:6333" # REST API
+      - "6334:6334" # gRPC (Optional, but good practice if used)
     volumes:
       - qdrant_storage:/qdrant/storage
     networks:
       - grok_stem_network
     restart: unless-stopped
+    # *** ADD HEALTHCHECK ***
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:6333"] # Simple check on REST port
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s # Give it time to start initially
 
   # Backend Service (FastAPI)
   backend:
     container_name: grok_stem_backend
     build:
-      context: ./backend         # build from your backend folder
+      context: ./backend
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/app/backend   # <-- mount into /app/backend, not /app
+      - ./backend:/app/backend
     env_file:
       - ./backend/.env
     environment:
-      - PYTHONPATH=/app          # <-- so 'import backend' finds /app/backend
+      - PYTHONPATH=/app
     networks:
       - grok_stem_network
     depends_on:
       qdrant:
-        condition: service_started
+        # *** CHANGE CONDITION ***
+        condition: service_healthy # Wait for Qdrant to pass health check
     restart: unless-stopped
     command: uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload
 
-  # Frontend Service (React/Vite)
+  # Frontend Service (React/Vite) - No changes needed here
   frontend:
     container_name: grok_stem_frontend
     build:
@@ -55,7 +64,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
-      - VITE_WEBSOCKET_URL=ws://localhost:8000/ws
+      - VITE_WEBSOCKET_URL=ws://localhost:8000/ws # Adjust if needed
 
 volumes:
   qdrant_storage:
